add_functionality_to_delete_task_branch_create

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="container">
   <h2>{{ APP_TITLE }}</h2>
   <app-add-card></app-add-card>
+  <!-- <app-delete-card></app-delete-card> -->
 </div>
