--- a/src/app/components/create-button/create-button.component.html
+++ b/src/app/components/create-button/create-button.component.html
@@ -1,1 +1,4 @@
-<button (click)="onClick()"><i class="fa-duotone fa-plus"></i>Create</button>
+<button (click)="onClick()">
+  <i class="fa-duotone fa-plus"></i>
+  Create
+</button>
