--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="container">
-  <h2>{{ APP_TITLE }}</h2>
+  <h2 innerText="{{ constantsService.APP_TITLE }}"></h2>
   <app-add-card></app-add-card>
 </div>
