--- a/src/app/components/card-item/card-item.component.css
+++ b/src/app/components/card-item/card-item.component.css
@@ -1,6 +1,6 @@
 .date {
   position: relative;
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-style: normal;
   font-weight: 700;
   font-size: 14px;
@@ -8,6 +8,6 @@
   color: #aaacbc;
 }
 
-.fa-trash-alt {
-  color: rgba(109, 107, 107, 0.835);
+ul li {
+  list-style: none;
 }
