space befor export keyword

--- a/src/app/components/card-item/card-item.component.css
+++ b/src/app/components/card-item/card-item.component.css
@@ -1,6 +1,6 @@
 .date {
   position: relative;
-  font-family: "Roboto";
+  font-family: 'Roboto';
   font-style: normal;
   font-weight: 700;
   font-size: 14px;
