--- a/src/app/components/task-button/task-button.component.html
+++ b/src/app/components/task-button/task-button.component.html
@@ -2,8 +2,8 @@
   *ngFor="let button of buttons"
   [src]="button.src"
   [attr.data-job]="button.dataJob"
-  [id]="id"
+  [id]="button.id"
   [ngStyle]="button.ngstyle"
   [alt]="button.label"
-  (click)="onTaskButtonClick(button)"
+  (click)="TaskButtonClick(button)"
 />
