--- a/src/app/components/task-button/task-button.component.html
+++ b/src/app/components/task-button/task-button.component.html
@@ -1,9 +1,11 @@
-<img
-  *ngFor="let button of buttons"
-  [src]="button.src"
-  [attr.data-job]="button.dataJob"
-  [id]="button.id"
-  [ngStyle]="button.ngstyle"
-  [alt]="button.label"
-  (click)="TaskButtonClick(button)"
-/>
+<ng-container  *ngFor="let button of buttons">
+  <img
+    [src]="button.src"
+    [attr.data-job]="button.dataJob"
+    [id]="button.id"
+    [ngStyle]="button.ngstyle"
+    [alt]="button.label"
+    *ngIf="visibilityHandle(button, task)"
+    (click)="TaskButtonClick(button)"
+  />
+  </ng-container>
