--- a/src/app/components/task-button/task-button.component.html
+++ b/src/app/components/task-button/task-button.component.html
@@ -5,5 +5,5 @@
   [id]="button.id"
   [ngStyle]="button.ngstyle"
   [alt]="button.label"
-  (click)="TaskButtonClick(button)"
+  (click)="onTaskButtonClick(button)"
 />
