--- a/src/app/components/add-card/add-card.component.html
+++ b/src/app/components/add-card/add-card.component.html
@@ -9,9 +9,24 @@
 </div>
 <ul>
   <li class="item" *ngFor="let task of taskService.taskList">
-    <p class="text" [id]="task.id" innerText="{{ task.name }}" [class.completed]="task.done"></p>
+    <p
+      class="text"
+      [id]="task.id"
+      innerText="{{ task.name }}"
+      [class.completed]="task.done"
+      [contentEditable]="task.editable"
+      #taskFocus
+    ></p>
     <div class="date" [id]="task.id">Created At: {{ formattedDate }}</div>
-    <app-task-button [id] = "task.id" [task]="task" (taskButtonClick)="handleTaskButtonClick($event)"></app-task-button>
-    <p *ngIf="task.done" class="duration" innerText = "Completed in {{ calculateDuration(task.startDate) }} day"></p>
+    <app-task-button
+      [id]="task.id"
+      [task]="task"
+      (taskButtonClick)="handleTaskButtonClick($event)"
+    ></app-task-button>
+    <p
+      *ngIf="task.done"
+      class="duration"
+      innerText="Completed in {{ calculateDuration(task.startDate) }} day"
+    ></p>
   </li>
 </ul>
