--- a/src/app/components/task-button/task-button.component.html
+++ b/src/app/components/task-button/task-button.component.html
@@ -1,4 +1,5 @@
-<ng-container  *ngFor="let button of buttons">
+<ng-container  *ngFor="let newbutton of newButtons">
+  <!-- <button class="styleButton">
   <img
     [src]="button.src"
     [attr.data-job]="button.dataJob"
@@ -8,4 +9,27 @@
     *ngIf="visibilityHandle(button, task)"
     (click)="onTaskButtonClick(button)"
   />
-  </ng-container>
+</button> -->
+
+<!-- <button 
+  class="styleButton"
+  *ngIf="visibilityHandle(newbutton, task)"
+  (click)="onTaskButtonClick(newbutton)"
+  [ngStyle]="newbutton.ngstyle"
+  [id]="newbutton.id"
+  [attr.data-job]="newbutton.dataJob"
+  innerHTML="{{newbutton.content}}"
+> 
+</button> -->
+
+<button 
+  class="styleButton"
+  *ngIf="visibilityHandle(newbutton, task)"
+  (click)="onTaskButtonClick(newbutton)"
+  [ngStyle]="newbutton.ngstyle"
+  [id]="newbutton.id"
+  [attr.data-job]="newbutton.dataJob"
+  innerHTML="{{newbutton.content}}"
+> 
+</button>
+</ng-container>
