--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
+<app-navbar></app-navbar>
+<router-outlet>
+</router-outlet>
 <div class="container">
   <h2 innerText="{{ constantsService.APP_TITLE }}"></h2>
   <app-add-card></app-add-card>
