navebar module test

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,6 @@
-<p>navbar works!</p>
+<header class="navbar">
+    <div class="logo-container">
+      <img src="assets/icons/logok.svg" [alt]="title + ' logo'" />
+      <h1>{{ title }}</h1>
+    </div>
+  </header>
