create granular modules to handle components, add styles to card items

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
 <app-navbar></app-navbar>
-<router-outlet>
-</router-outlet>
-<div class="container">
-  <h2 innerText="{{ constantsService.APP_TITLE }}"></h2>
+
+<div>
   <app-add-card></app-add-card>
 </div>
