--- a/src/app/components/card-item/card-item.component.css
+++ b/src/app/components/card-item/card-item.component.css
@@ -1,13 +1,7 @@
 .date {
   position: relative;
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 700;
+  font-weight: 600px;
   font-size: 14px;
   line-height: 16px;
-  color: #aaacbc;
-}
-
-ul li {
-  list-style: none;
+  color: #BBBDD0
 }
