--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,11 @@
-<p>navbar works!</p>
+<header class="navbar">
+    <div class="grid-navbar-item">
+    <div class ="logoContainer">
+        <img src="assets/icons/logo.svg" alt="todos'logo" class="titleLogo"/>
+        <span class="title">{{title}}</span>
+        </div>
+        <div>
+        <img src="assets/icons/searchIcon.svg" alt="search" class="searchIcon"/>
+    </div>
+</div>
+</header>
