--- a/src/app/components/add-card/add-card.component.css
+++ b/src/app/components/add-card/add-card.component.css
@@ -1,13 +1,35 @@
-.date {
-  position: relative;
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 16px;
-  color: #aaacbc;
+.secondHeader,
+.inputBoxContainer {
+  width: 80%;
+  display: flex;
+  margin: auto;
+  justify-content: space-between;
+  padding-top: 2.125rem;
+}
+
+.filter ::ng-deep button{
+  margin-left:10px;
 }
 
 .fa-trash-alt {
   color: rgba(109, 107, 107, 0.835);
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 2.125rem;
+  width: 80%;
+  margin: auto;
+  padding-top: 2.125rem;
+}
+
+:host ::ng-deep div.grid-item {
+  border: 1px solid black;
+  box-sizing: border-box;
+  justify-content: center;
+  overflow: auto;
+  word-wrap: break-word;
+  width: 100%;
+  padding-left: 1rem;
 }
