--- a/src/app/components/add-card/add-card.component.html
+++ b/src/app/components/add-card/add-card.component.html
@@ -1,7 +1,7 @@
 <h2 innerText="{{ APP_TITLE }}" class="secondHeader"></h2>
 <div class="secondHeader">
 <div>
-<app-create-button (createButtonClick)="onShowInput()" class="createButton"><i class="fa-duotone fa-plus"></i>Create</app-create-button>
+<app-create-button (clickEvent)="onShowInput()" class="createButton"><i class="fa-duotone fa-plus"></i>Create</app-create-button>
 </div>
 <div class="filter">
 <app-create-button >All</app-create-button>
