adjust inputbox with tasks alignment, create menu, adjust styling, adjust focus

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-
+<app-menu></app-menu>
 <div>
-  <app-add-card></app-add-card>
+  <app-card-item></app-card-item>
 </div>
