--- a/src/app/components/add-card/add-card.component.html
+++ b/src/app/components/add-card/add-card.component.html
@@ -1,23 +1,7 @@
-<h2 innerText="{{ APP_TITLE }}" class="secondHeader"></h2>
-<div class="secondHeader">
-<div>
-<app-create-button (clickEvent)="onShowInput()" class="createButton"><i class="fa-duotone fa-plus"></i>Create</app-create-button>
-</div>
-<div class="filter">
-<app-create-button >All</app-create-button>
-<app-create-button >Incomplete</app-create-button>
-<app-create-button >Complete</app-create-button>
-</div>
-</div>
-
-<div class="inputBoxContainer">
-<div *ngIf="utilityService.show">
-  <input [(ngModel)]="newTask" appNewTaskInput class="inputBox"/>
-  <app-create-button (click)="onAddTaskToTaskList()" id="addTaskButton">Add Task</app-create-button>
-  <app-create-button (click)="onResetInput()">
-    <i class="fas fa-trash-alt"></i>
-  </app-create-button>
-</div>
-</div>
-
-<app-card-item [taskLists]="taskService.taskList" class="grid-container"></app-card-item>
+<input [(ngModel)]="newTask"  appNewTaskInput class="inputBox" /> 
+<app-create-button (click)="onAddTaskToTaskList()" id="addTaskButton"
+  >Add Task</app-create-button
+>
+<app-create-button (click)="onResetInput()">
+  <i class="fas fa-trash-alt"></i>
+</app-create-button>
