fix constants, buttongroupt, task service, styling

--- a/src/app/components/card-item/card-item.component.css
+++ b/src/app/components/card-item/card-item.component.css
@@ -1,4 +1,4 @@
-.date {
+.date{
   position: relative;
   font-size: 14px;
   line-height: 16px;
@@ -25,4 +25,8 @@
   background: #ffffff;
 }
 
+.text{
+  font-weight: 700;
+  font-size: 24px;
+}
 
