--- a/src/app/components/menu/menu.component.css
+++ b/src/app/components/menu/menu.component.css
@@ -9,3 +9,16 @@
 .filter ::ng-deep button{
   margin-left:10px;
 }
+
+.createButton ::ng-deep button{
+  border-radius: 5px;
+  border: none;
+  width: 104px;
+  height: 36px;
+  background-color: #7A8DFD;
+  color: white;
+  font-size: 16px;
+  line-height: 19px;
+  font-weight: 500;
+}
+
