--- a/src/app/components/task-button/task-button.component.html
+++ b/src/app/components/task-button/task-button.component.html
@@ -1,5 +1,5 @@
 <img
-  *ngFor="let button of buttons"
+  *ngFor="let button of buttonGroup"
   [src]="button.src"
   [attr.data-job]="button.dataJob"
   [id]="id"
