--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,7 +1,7 @@
 <h2 innerText="{{ APP_TITLE }}" class="secondHeader"></h2>
 <div class="secondHeader">
-<div>
-<app-create-button (clickEvent)="onShowInput()" class="createButton"><i class="fa-duotone fa-plus"></i>Create</app-create-button>
+<div class="createButton">
+<app-create-button (clickEvent)="onShowInput()" ><i class="fa-duotone fa-plus"></i>Create</app-create-button>
 </div>
 <div class="filter">
 <app-create-button >All</app-create-button>
