--- a/src/app/components/task-button/task-button.component.html
+++ b/src/app/components/task-button/task-button.component.html
@@ -1,10 +1,9 @@
 <img
-  *ngFor="let button of buttonGroup"
+  *ngFor="let button of buttonGroup;"
   [src]="button.src"
   [attr.data-job]="button.dataJob"
-  [id]="button.id"
   [ngStyle]="button.ngstyle"
   [alt]="button.label"
-  (click)="onTaskButtonClick(button)"
+  (click)="onTaskButtonClick({index: id, dataJob: button.dataJob})"
   class="taskButtonStyle"
 />
