--- a/src/app/components/card-item/card-item.component.html
+++ b/src/app/components/card-item/card-item.component.html
@@ -1,8 +1,8 @@
 <div class="grid-container">
-  <div *ngIf="utilityService.show" class="inputBoxContainer">
+  <div *ngIf=" utility.show" class="inputBoxContainer">
     <app-add-card ></app-add-card>
   </div>
-  <div *ngFor="let task of taskService.taskList" class="taskList">
+  <div *ngFor="let task of taskList" class="taskList">
     <p class="text" innerText="{{ task.name }}"></p>
     <div class="date" [id]="task.id">Created At: {{ formattedDate }}</div>
     <app-task-button class="taskButton" [id]="task.id"></app-task-button>
