--- a/src/app/components/task-button/task-button.component.html
+++ b/src/app/components/task-button/task-button.component.html
@@ -1,12 +1,12 @@
-<ng-container  *ngFor="let button of buttonGroup">
+<ng-container *ngFor="let button of buttonGroup">
   <img
     [src]="button.src"
     [attr.data-job]="button.dataJob"
-    [ngStyle]="button.ngstyle"
     [alt]="button.label"
-    *ngIf="visibilityHandle(button, task)"
-    (click)="onTaskButtonClick({index: id, dataJob: button.dataJob})"
-    class="taskButtonStyle"
+    [ngClass]="[
+      'taskButtonStyle',
+      button.dataJob !== 'delete' && task.done ? 'hidden' : ''
+    ]"
+    (click)="onTaskButtonClick({ index: id, dataJob: button.dataJob })"
   />
-  </ng-container>
-
+</ng-container>
