--- a/src/app/components/task-button/task-button.component.html
+++ b/src/app/components/task-button/task-button.component.html
@@ -4,5 +4,5 @@
   [attr.data-job]="button.dataJob"
   [ngStyle]="button.ngstyle"
   [alt]="button.label"
-  class="taskButtonStyle"
+  class="task-button-style"
 />
