--- a/src/app/components/task-button/task-button.component.scss
+++ b/src/app/components/task-button/task-button.component.scss
@@ -1,3 +1,5 @@
-.taskButtonStyle{
-    padding-right: 10px;
+@import "src/styles/_variables.scss";
+
+.task-button-style {
+  padding-right: $sp-10;
 }
