--- a/src/app/components/add-card/add-card.component.html
+++ b/src/app/components/add-card/add-card.component.html
@@ -1,7 +1,13 @@
-<input [(ngModel)]="newTask"  appNewTaskInput class="inputBox" /> 
-<app-create-button (click)="onAddTaskToTaskList()" class="addTaskButton"
-  >Add Task</app-create-button
->
-<app-create-button (click)="onResetInput()">
-  <i class="fas fa-trash-alt"></i>
-</app-create-button>
+<input [(ngModel)]="newTask" appNewTaskInput class="input-box" />
+<div class="task-creator">
+  <div class="add-task-button">
+    <app-create-button (click)="onAddTaskToTaskList()"
+      >Add Task</app-create-button
+    >
+  </div>
+  <div class="reset-task">
+    <app-create-button (click)="onResetInput()">
+      <img src="assets/icons/delete.svg" alt="reset" />
+    </app-create-button>
+  </div>
+</div>
