--- a/src/app/components/card-item/card-item.component.html
+++ b/src/app/components/card-item/card-item.component.html
@@ -6,6 +6,6 @@
   <div *ngFor="let task of taskList" class="taskList">
     <p class="text" innerText="{{ task.name }}"></p>
     <div class="date" [id]="task.id">Created At: {{ formattedDate }}</div>
-    <app-task-button class="taskButton" [id]="task.id"></app-task-button>
+    <app-task-button class="task-button" [id]="task.id"></app-task-button>
   </div>
 </div>
