--- a/src/app/components/menu/menu.component.scss
+++ b/src/app/components/menu/menu.component.scss
@@ -1,23 +1,26 @@
+@import "src/styles/_variables.scss";
+@import "src/styles/_colors.scss";
+@import "src/styles/_reuse.scss";
+
 .secondHeader {
-  width: 80%;
-  display: flex;
-  margin: auto;
-  justify-content: space-between;
+  @extend %flex-shared;
   padding-top: 2.125rem;
 }
 
-.filter ::ng-deep button{
-  margin-left:10px;
+.filter ::ng-deep button {
+  margin-left: $sp-10;
 }
 
-.createButton ::ng-deep button{
-  border-radius: 5px;
+.createButton ::ng-deep button {
+  border-radius: $sp-5;
   border: none;
   width: 104px;
-  height: 36px;
-  background-color: #7A8DFD;
-  color: white;
-  font-size: 16px;
+  height: $sp-36;
+  background-color: $primary-blue;
+  color: $primary-white;
   line-height: 19px;
-  font-weight: 500;
+  font: {
+    size: 16px;
+    weight: 500;
+  }
 }
