--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,11 +1,11 @@
 <header class="navbar">
   <div class="grid-navbar-item">
     <div class="logoContainer">
-      <img src="assets/icons/logo.svg" alt="todos'logo" class="titleLogo" />
+      <img src="assets/icons/logo.svg" alt="todos'logo" class="title-logo" />
       <span class="title">{{ title }}</span>
     </div>
     <div>
-      <img src="assets/icons/searchIcon.svg" alt="search" class="searchIcon" />
+      <img src="assets/icons/searchIcon.svg" alt="search" class="search-icon" />
     </div>
   </div>
 </header>
