--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,4 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import "colors";
+@import "variables";
+@import "reuse";
 
 body {
   background-color: #f8f9ff;
@@ -6,7 +9,8 @@ body {
 }
 
 * {
-  font-family: "Roboto", sans-serif;
-  font-style: normal;
-  font-weight: 700px;
+  font: {
+    family: "Roboto", sans-serif;
+    style: normal;
+  }
 }
