fix values of styling properties

--- a/src/app/components/card-item/card-item.component.scss
+++ b/src/app/components/card-item/card-item.component.scss
@@ -5,7 +5,7 @@
 .date {
   position: relative;
   font-size: 0.875rem;
-  line-height: 16px;
+  line-height: 1rem;
   color: $primary-gray;
 }
 
@@ -26,6 +26,6 @@
 .text {
   font: {
     weight: 700;
-    size: 24px;
+    size: 1.5rem;
   }
 }
