--- a/src/app/components/add-card/add-card.component.scss
+++ b/src/app/components/add-card/add-card.component.scss
@@ -4,7 +4,7 @@
 
 .input-box {
   @include task-container(0.188rem, 0rem);
-  height: 64px;
+  height: 4rem;
   margin: 0 0 $sp-10 0;
   border-radius: none;
   padding-left: 1rem;
@@ -19,10 +19,10 @@
 .add-task-button {
   place-items: center;
   border-radius: $sp-4;
-  width: 104px;
+  width: 6.5rem;
   height: $sp-36;
   display: grid;
-  border: 1px solid $primary-gray;
+  border: 0.063rem solid $primary-gray;
   ::ng-deep button {
     border: none;
     border-radius: $sp-4;
@@ -31,7 +31,7 @@
 }
 
 .reset-task {
-  margin-left: 8px;
+  margin-left: 0.5rem;
   ::ng-deep button {
     background-color: $primary-white;
     height: $sp-36;
