--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -12,7 +12,7 @@
 
 .title {
   color: $primary-blue;
-  line-height: 42px;
+  line-height: 2.625rem;
   font: {
     weight: 700;
     size: $sp-36;
@@ -23,7 +23,7 @@ img {
   position: relative;
   &.title-logo {
     top: $sp-5;
-    margin-right: 13px;
+    margin-right: 0.813rem;
   }
   &.search-icon {
     top: $sp-10;
